# dbt-column-lineage

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  conftest.py  format.py  index.html  main.py  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.py  sitemap.xml  type_check.py
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
changelog/: index.html
dbt_column_lineage/artifacts/: catalog.py  exceptions.py  manifest.py  registry.py  sql_parser.py
dbt_column_lineage/cli/: main.py
dbt_column_lineage/lineage/: service.py
dbt_column_lineage/models/: schema.py
dbt_column_lineage/parser/: __init__.py  sql_parser.py  sql_parser_utils.py
docs/: index.md
docs/features/: impact-analysis.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: custom.css
features/impact-analysis/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: format.py  render_start.py  run_tests.py  type_check.py
search/: search_index.json
src/artifacts/: catalog.py  manifest.py
src/models/: schema.py
src/registry/: exceptions.py  registry.py  sql_parser.py
tests/: conftest.py
tests/artifacts/: test_catalog.py  test_manifest.py
tests/dbt_test_project/: .user.yml  dbt_project.yml  setup.py
tests/e2e/: conftest.py  test_lineage_api.py
tests/integration/: conftest.py  test_exposures_integration.py  test_html_display_integration.py  test_lineage_explorer_integration.py  test_registry_integration.py
tests/registry/: test_registry.py  test_sql_parser.py
(+52 files in other folders)
